# midigen

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  example.mid  example.py  index.html  pyproject.toml  rnb1.py  song_example.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: release.yml  test_midigen.yml  tests.yml
midigen/: README.md  __init__.py  channel_pool.py  chord.py  drums.py  instruments.py  key.py  melody.py  midigen.py  note.py  pyproject.toml  rhythm.py  roman.py  scale.py  section.py  song.py  time_utils.py  track.py
midigen/compiler/: __init__.py  midi_compiler.py
midigen/docs/: docs.md
midigen/examples/: basic_example.py
midigen/midigen/: chord.py  key.py  midigen.py  scale.py
midigen/tests/: test_channel_pool.py  test_chord.py  test_drums.py  test_golden_master.py  test_integration.py  test_key.py  test_melody.py  test_midigen.py  test_note.py  test_rhythm.py  test_roman.py  test_scale.py  test_song.py  test_time_utils.py  test_track.py
tests/: test_chord.py  test_key.py  test_midigen.py  test_note.py  test_scale.py  test_track.py
