[tool.poetry]
name = "music-python"
version = "0.1.0"
description = ""
authors = ["cainky <kylecain.me@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mido = "^1.3.0"
music21 = "^9.1.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
