[tool.poetry]
name = "midigen"
version = "0.1.0"
description = ""
authors = ["cainky <kylecain.me@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mido = "^1.3.2"
music21 = "^9.1.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
flake8 = ">=6.1,<8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
