[tool.poetry]
name = "midigen-lib"   # distribution name on PyPI
packages = [{ include = "midigen" }]
version = "1.0.0"
description = "High-level, theory-powered MIDI generation library"
authors = ["cainky <kylecain.me@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://github.com/cainky/midigen"
keywords = ["midi", "music-generation", "mido", "music-theory"]

[tool.poetry.dependencies]
python = "^3.10"
mido = "^1.3.2"


[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.6,<5.0"
flake8 = ">=6.1,<8.0"
pytest = "^9.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
